--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^6.12.0",
     "mongoose": "^5.10.9",
     "multer": "^1.4.5-lts.1"
   },
